; In 3.0 we can use directory targets
(rule
 (alias pip-build)
 (deps
  (universe)
  (package coq-serapi)
   requirements.txt
   README.md
   ; at some point maybe we prefer (glob pycoq/*.py)
   pycoq/__init__.py
   pycoq/pycoq.so)
 (targets build)
 (action
  (progn
   (run python3 %{dep:setup.py} build))))

(rule
 (alias pip-install)
 (deps
  (universe)
  (package coq-serapi)
   requirements.txt
   README.md
   ; at some point maybe we prefer (glob pycoq/*.py)
   pycoq/__init__.py
   pycoq/pycoq.so)
 (action
  (progn
   (run python3 %{dep:setup.py} build)
   (run pip3 install .))))
