(rule
 (deps
  (:test-file test.py)
  (package coq-serapi)
   ../pycoq/pycoq.so)
 (targets test.log)
 (action
   (with-outputs-to %{targets}
    (run python3 %{test-file}))))

(rule
 (deps
  (:test-file test2.py)
  (package coq-serapi)
   ../pycoq/pycoq.so)
 (targets test2.log)
 (action
   (with-outputs-to %{targets}
    (run python3 %{test-file}))))

(rule
 (deps
  (:test-file error.py)
  (package coq-serapi)
   ../pycoq/pycoq.so)
 (targets error.log)
 (action
   (with-outputs-to %{targets}
    (run python3 %{test-file}))))

(rule
 (alias runtest)
 (action (diff test.out test.log)))

(rule
 (alias runtest)
 (action (diff test2.out test2.log)))

(rule
 (alias runtest)
 (action (diff error.out error.log)))
