(rule
 (deps
  (:test-file test.py)
  (package coq-serapi)
   ../build)
 (targets test.log)
 (action
   (with-outputs-to %{targets}
    (setenv PYTHONPATH ../build/lib
     (run python3 %{test-file})))))

(rule
 (deps
  (:test-file test2.py)
  (package coq-serapi)
   ../build)
 (targets test2.log)
 (action
   (with-outputs-to %{targets}
    (setenv PYTHONPATH ../build/lib
     (run python3 %{test-file})))))

(rule
 (deps
  (:test-file error.py)
  (package coq-serapi)
   ../build)
 (targets error.log)
 (action
   (with-outputs-to %{targets}
    (setenv PYTHONPATH ../build/lib
     (run python3 %{test-file})))))

(rule
 (alias runtest)
 (action (diff out/test.out test.log)))

(rule
 (alias runtest)
 (action (diff out/test2.out test2.log)))

(rule
 (alias runtest)
 (action (diff out/error.out error.log)))
