(rule
 (deps
  (:test-file py/unit/spec.py)
  (package coq-serapi)
   ../build)
   (targets unit-spec.log)
   (action
    (with-outputs-to %{targets}
     (setenv PYTHONPATH ../build/lib
      (run python3 %{test-file})))))

(rule
 (deps
  (:test-file py/property/spec.py)
  (package coq-serapi)
   ../build)
   (targets property-spec.log)
   (action
    (with-outputs-to %{targets}
     (setenv PYTHONPATH ../build/lib
      (run python3 %{test-file})))))

(rule
 (alias runtest)
 (action (diff out/unit-spec.out unit-spec.log)))

(rule
 (alias runtest)
 (action (diff out/property-spec.out property-spec.log)))
